      applications.

      \item When \R packages are built, typically by \command{R CMD build <pkg>},
      the new \command{--user=<build_user>} option overrides the
      (internally determined) user name, currently \code{Sys.info()["user"]}
      or \env{LOGNAME}.  This is a (modified) fulfillment of Will Landau's
      suggestion in \PR{17530}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.
    }
  }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} notes when S4-style exports are used
      without declaring a strong dependence on package \pkg{methods}.

      \item \code{tools::checkRd()} (used by \command{R CMD check})
      detects more problems with \verb{\Sexpr}-based dynamic content,
      including bad nesting of \verb{\Sexpr}s and invalid arguments.

      \item \code{tools::checkRd()} now reports Rd titles and section
      names ending in a period; this is ignored by \command{R CMD check}
      unless environment variable \env{_R_CHECK_RD_CHECKRD_MINLEVEL_} is
      set to -5 or smaller.

      \item \command{R CMD check} now warns about Rd files without an
      \verb{\alias}, as long documented in \sQuote{Writing R Extensions}
      §1.3.1.
      This currently ignores files with \verb{\docType{package}}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Arguments are now properly forwarded to methods on S4 generics
      with \dots{} in the middle of their formal arguments. This was
      broken for the case when a method introduced an argument but did